--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <title>Emmanuel Jemeni</title>
+    <title>Emmanuel Jemeni | Front-End Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
